#
# Copyright (c) [2020-2021] Huawei Technologies Co.,Ltd.All rights reserved.
#
# OpenArkCompiler is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at:
#
#     http://license.coscl.org.cn/MulanPSL2
#
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
# FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.
#
src_libmplutil = [
  "src/mpl_logging.cpp",
  "src/muid.cpp",
  "src/namemangler.cpp",
  "src/literalstrname.cpp",
  "src/file_layout.cpp",
  "src/mpl_scheduler.cpp",
  "src/itab_util.cpp",
  "src/mpl_timer.cpp",
  "src/profile.cpp",
  "src/string_utils.cpp",
  "src/error_code.cpp",
  "src/thread_env.cpp",
]

include_libmplutil = [
  "${MAPLEALL_ROOT}/maple_util/include",
  "${MAPLEALL_ROOT}/maple_ir/include",
  "${MAPLEALL_ROOT}/mempool/include",
  "${MAPLEALL_ROOT}/maple_driver/include",
  "${MAPLE_ROOT}/third_party/bounds_checking_function/include",
]

configs = [ "${MAPLEALL_ROOT}:mapleallcompilecfg" ]

static_library("libmplutil") {
  sources = src_libmplutil
  include_dirs = include_libmplutil
  libs = [ "pthread" ]
  output_dir = "${root_out_dir}/lib/${HOST_ARCH}"
}
