src_libmempool = [
  "src/maple_string.cpp",
  "src/mempool.cpp",
]
include_directories = [
  "${MAPLEALL_ROOT}/mempool/include",
  "${MAPLEALL_ROOT}/maple_ir/include",
  "${MAPLEALL_ROOT}/maple_util/include",
  "${MAPLEALL_ROOT}/maple_driver/include",
  "//../ThirdParty/bounds_checking_function/include",
]

configs = [ "${MAPLEALL_ROOT}:mapleallcompilecfg" ]


static_library("libmempool") {
  sources = src_libmempool
  include_dirs = include_directories
  output_dir = "${root_out_dir}/lib/${HOST_ARCH}"
}

executable("MemPool") {
  sources = [
    "src/MPTest.cpp",
  ]

  include_dirs = include_directories

  deps = [
    ":libmempool",
    "//../ThirdParty/bounds_checking_function:libHWSecureC",
    "${MAPLEALL_ROOT}/maple_driver:liboption_parser",
    "${MAPLEALL_ROOT}/maple_util:libmplutil",
  ]
}
