#
# Copyright (c) [2020] Huawei Technologies Co.,Ltd.All rights reserved.
#
# OpenArkCompiler is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at:
#
#     http://license.coscl.org.cn/MulanPSL2
#
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
# FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.
#
sources_common = [
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/fscanf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/fwscanf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/gets_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/memcpy_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/memmove_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/memset_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/scanf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/securecutil.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/secureinput_a.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/secureinput_w.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/secureprintoutput_a.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/secureprintoutput_w.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/snprintf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/sprintf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/sscanf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/strcat_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/strcpy_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/strncat_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/strncpy_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/strtok_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/swprintf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/swscanf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/vfscanf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/vfwscanf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/vscanf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/vsnprintf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/vsprintf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/vsscanf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/vswprintf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/vswscanf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/vwscanf_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/wcscat_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/wcscpy_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/wcsncat_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/wcsncpy_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/wcstok_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/wmemcpy_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/wmemmove_s.c",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src/wscanf_s.c",
]

include_common = [
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/include",
  "${MAPLE_ROOT}/src/mapleall/huawei_secure_c/src",
]

static_library("libhuawei_secure_c") {
  sources = sources_common
  include_dirs = include_common

  cflags = []
  cflags_c = []
  configs = [ "${MAPLE_MRT_ROOT}:mrt_c_flags" ]
}
